--- a/versions.props
+++ b/versions.props
@@ -6,7 +6,7 @@ com.palantir.conjure:* = 4.0.0
 com.palantir.baseline:* = 0.20.1
 com.palantir.remoting-*:* = 1.8.0
 com.palantir.ri:resource-identifier = 1.0.1
-com.palantir.safe-logging:safe-logging = 1.9.0
+com.palantir.safe-logging:* = 1.14.0
 com.palantir.syntactic-paths:syntactic-paths = 0.6.1
 com.palantir.tokens:* = 3.5.2
 com.squareup.okhttp3:* = 3.12.0
