--- a/conjure-postman/build.gradle
+++ b/conjure-postman/build.gradle
@@ -21,9 +21,11 @@ mainClassName = 'com.palantir.conjure.postman.cli.ConjurePostmanCli'
 dependencies {
     compile project(':conjure-postman-core')
     compile 'commons-cli:commons-cli'
+    compile 'com.palantir.safe-logging:preconditions'
 
     testCompile 'junit:junit'
     testCompile 'org.assertj:assertj-core'
+    testCompile 'com.palantir.safe-logging:preconditions-assertj'
 
     annotationProcessor 'org.immutables:value'
     compileOnly 'org.immutables:value::annotations'
