--- a/build.gradle
+++ b/build.gradle
@@ -26,45 +26,42 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
-        classpath 'com.netflix.nebula:nebula-dependency-recommender:5.2.0'
-        classpath 'com.netflix.nebula:nebula-publishing-plugin:7.0.12'
-        classpath 'com.palantir.baseline:gradle-baseline-java:0.20.1'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.5'
+        classpath 'com.palantir.javaformat:gradle-palantir-java-format:2.0.1'
+        classpath 'com.netflix.nebula:nebula-publishing-plugin:17.3.2'
+        classpath 'com.netflix.nebula:gradle-info-plugin:9.2.1'
+        classpath 'com.palantir.baseline:gradle-baseline-java:3.66.0'
         classpath 'com.palantir.configurationresolver:gradle-configuration-resolver-plugin:0.3.0'
-        classpath 'com.palantir.gradle.gitversion:gradle-git-version:0.10.0'
-        classpath 'gradle.plugin.com.palantir:gradle-circle-style:1.1.2'
-        classpath 'gradle.plugin.org.inferred:gradle-processors:2.1.0'
+        classpath 'com.palantir.gradle.consistentversions:gradle-consistent-versions:1.27.0'
+        classpath 'com.palantir.gradle.gitversion:gradle-git-version:0.12.3'
+        classpath 'gradle.plugin.org.inferred:gradle-processors:3.3.0'
     }
 }
 
-apply plugin: 'com.palantir.baseline-config'
-apply plugin: 'com.palantir.baseline-idea'
-apply plugin: 'com.palantir.circle.style'
+apply plugin: 'com.palantir.baseline'
 apply plugin: 'com.palantir.git-version'
+apply plugin: 'com.palantir.consistent-versions'
 
 allprojects {
+    apply plugin: 'com.palantir.java-format'
+    version System.env.CIRCLE_TAG ?: gitVersion()
     group 'com.palantir.conjure.postman'
-    version gitVersion()
 
     repositories {
         mavenCentral()
+        jcenter()
         maven {
             url 'https://dl.bintray.com/palantir/releases/'
         }
     }
 
     apply plugin: 'com.palantir.configuration-resolver'
-    apply plugin: 'nebula.dependency-recommender'
-
-    dependencyRecommendations {
-        strategy OverrideTransitives
-        propertiesFile file: project.rootProject.file('versions.props')
-    }
 
     configurations.all {
         resolutionStrategy {
             failOnVersionConflict()
         }
+        resolutionStrategy.preferProjectModules()
         resolutionStrategy.eachDependency { details ->
             if (details.requested.group == 'org.glassfish.hk2.external' && details.requested.name == 'javax.inject') {
                 details.useTarget group: 'javax.inject', name: 'javax.inject', version: '1'
@@ -76,17 +73,12 @@ allprojects {
 
 subprojects {
     apply plugin: 'java'
-    apply plugin: 'com.palantir.baseline-checkstyle'
-    apply plugin: 'com.palantir.baseline-eclipse'
-    apply plugin: 'com.palantir.baseline-idea'
-    apply plugin: 'com.palantir.baseline-error-prone'
-    apply plugin: 'com.palantir.baseline-class-uniqueness'
     apply plugin: 'org.inferred.processors'
 
     sourceCompatibility = 1.8
 
     tasks.withType(JavaCompile) {
-        options.compilerArgs += ['-XepDisableWarningsInGeneratedCode', '-Werror']
+        options.compilerArgs += ['-Werror']
     }
 
     // Run `./gradlew test -Drecreate=true` to recreate all the expected
@@ -94,8 +86,4 @@ subprojects {
     tasks.withType(Test) {
         systemProperty 'recreate', System.getProperty('recreate', 'false')
     }
-}
-
-dependencies {
-    baseline 'com.palantir.baseline:gradle-baseline-java-config@zip'
 }
