--- a/conjure-postman-core/build.gradle
+++ b/conjure-postman-core/build.gradle
@@ -25,7 +25,9 @@ dependencies {
     testCompile 'com.palantir.conjure:conjure-core'
     testCompile 'junit:junit'
     testCompile 'org.assertj:assertj-core'
+    testCompile 'com.palantir.safe-logging:preconditions-assertj'
 
     annotationProcessor 'org.immutables:value'
     compileOnly 'org.immutables:value::annotations'
+    testCompileOnly 'org.immutables:value::annotations'
 }
