--- a/conjure-postman-core/build.gradle
+++ b/conjure-postman-core/build.gradle
@@ -14,6 +14,7 @@
  * limitations under the License.
  */
 
+apply plugin: 'com.palantir.external-publish-application-dist'
 apply plugin: 'java-library'
 
 dependencies {
